<!--
  ~ /*
  ~  * PROJECT LICENSE
  ~  *
  ~  * This project was submitted by Beatriz Ovejero as part of the Android Developer
  ~  * Nanodegree at Udacity.
  ~  *
  ~  * As part of Udacity Honor code, your submissions must be your own work, hence
  ~  * submitting this project as yours will cause you to break the Udacity Honor Code
  ~  * and the suspension of your account.
  ~  *
  ~  * As author of the project, I allow you to check it as a reference, but if you submit it
  ~  * as your own project, it's your own responsibility if you get expelled.
  ~  *
  ~  * Copyright (c) 2018 Beatriz Ovejero
  ~  *
  ~  * Besides the above notice, the following license applies and this license notice must be
  ~  * included in all works derived from this project.
  ~  *
  ~  * MIT License
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<resources>
    <string name="app_name">Orpheus Player</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="desc1">"This is the main screen of the app, the one that the user sees when he/she opens the application.
        \n The structure contains one Imageview as a cover, and three textviews, one for each activity.
        \n If you click in any of the Textviews, you will be forwarded to a new screen."</string>
    <string name="desc2">"This is the activity where albums are shown. The idea is to have linkables images with the songs activity as a destination.
        \n For this application and to show how it would work, I have added a clickable ImageView for the first album and if the user clicks on it, he/she will be redirected to the songs activity. This has been done with an intent from an ImageView."</string>
    <string name="desc3">"This is the activity where all the info about the artist would be. For this activity, I'm only showing the structure, not the real info. It would include a picture and a little bio with some professional data".</string>
    <string name="desc4">"This activity would include all the songs for an album. In this case, I have only added three but it would have several more. For each song the user would find a play button and a stop one.
        \n I have implemented a playing method and a stopping method for the first song to show how it would work."</string>
    <string name="song1">Lady of the Deep Forest</string>
    <string name="song2">Lost in love</string>
    <string name="song3">Family Conversations</string>
    <string name="title1">Beautiful Open Spaces Trio Tracks</string>
    <string name="title2">Bien à l\'ouest</string>
    <string name="title3">Curiosity</string>
    <string name="title4">deals, ideas, ideals</string>
    <string name="artist1">Ash Turner</string>
    <string name="artist2">Byzance Nord</string>
    <string name="artist3">Lobo Loco</string>
    <string name="artist4">Assif Tsahar</string>
    <string name="bio1">XXXXXXXX</string>
    <string name="bio2">XXXXXXXX</string>
    <string name="bio3">XXXXXXXX</string>
    <string name="bio4">XXXXXXXX</string>
</resources>


