<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * PROJECT LICENSE
  ~  *
  ~  * This project was submitted by Beatriz Ovejero as part of the Android Developer
  ~  * Nanodegree at Udacity.
  ~  *
  ~  * As part of Udacity Honor code, your submissions must be your own work, hence
  ~  * submitting this project as yours will cause you to break the Udacity Honor Code
  ~  * and the suspension of your account.
  ~  *
  ~  * As author of the project, I allow you to check it as a reference, but if you submit it
  ~  * as your own project, it's your own responsibility if you get expelled.
  ~  *
  ~  * Copyright (c) 2018 Beatriz Ovejero
  ~  *
  ~  * Besides the above notice, the following license applies and this license notice must be
  ~  * included in all works derived from this project.
  ~  *
  ~  * MIT License
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/antique"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/disc1"
                style="@style/discs"
                android:src="@drawable/disc1" />

            <TextView
                android:id="@+id/title1"
                style="@style/titles"
                android:layout_alignTop="@+id/disc1"
                android:layout_toEndOf="@+id/disc1"
                android:layout_toRightOf="@+id/disc1"
                android:text="@string/title1" />

            <TextView
                android:id="@+id/artist1"
                style="@style/artists"
                android:layout_above="@+id/disc2"
                android:layout_alignLeft="@+id/title1"
                android:layout_alignStart="@+id/title1"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:text="@string/artist1" />

            <ImageView
                android:id="@+id/disc2"
                style="@style/discs"
                android:layout_below="@+id/disc1"
                android:src="@drawable/disc2" />

            <TextView
                android:id="@+id/title2"
                style="@style/titles"
                android:layout_alignLeft="@+id/artist1"
                android:layout_alignStart="@+id/artist1"
                android:layout_alignTop="@+id/disc2"
                android:text="@string/title2" />

            <TextView
                android:id="@+id/artist2"
                style="@style/artists"
                android:layout_alignLeft="@+id/artist1"
                android:layout_alignStart="@+id/artist1"
                android:layout_below="@+id/title2"
                android:text="@string/artist2" />

            <ImageView
                android:id="@+id/disc3"
                style="@style/discs"
                android:layout_below="@+id/disc2"
                android:src="@drawable/disc3" />

            <TextView
                android:id="@+id/title3"
                style="@style/titles"
                android:layout_alignLeft="@+id/artist1"
                android:layout_alignStart="@+id/artist1"
                android:layout_alignTop="@+id/disc3"
                android:text="@string/title3" />

            <TextView
                android:id="@+id/artist3"
                style="@style/artists"
                android:layout_alignLeft="@+id/artist1"
                android:layout_alignStart="@+id/artist1"
                android:layout_below="@+id/title3"
                android:layout_marginTop="16dp"
                android:text="@string/artist3" />

            <ImageView
                android:id="@+id/disc4"
                style="@style/discs"
                android:layout_below="@+id/disc3"
                android:src="@drawable/disc4" />

            <TextView
                android:id="@+id/title4"
                style="@style/titles"
                android:layout_alignLeft="@+id/artist1"
                android:layout_alignStart="@+id/artist1"
                android:layout_alignTop="@+id/disc4"
                android:text="@string/title4" />

            <TextView
                android:id="@+id/artist4"
                style="@style/artists"
                android:layout_alignLeft="@+id/artist1"
                android:layout_alignStart="@+id/artist1"
                android:layout_below="@+id/title4"
                android:layout_marginTop="11dp"
                android:text="@string/artist4" />

            <TextView
                style="@style/desc2"
                android:layout_below="@+id/disc4"
                android:layout_marginTop="11dp"
                android:text="@string/desc2" />

        </RelativeLayout>

    </LinearLayout>


</ScrollView>
