<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * PROJECT LICENSE
  ~  *
  ~  * This project was submitted by Beatriz Ovejero as part of the Android Developer
  ~  * Nanodegree at Udacity.
  ~  *
  ~  * As part of Udacity Honor code, your submissions must be your own work, hence
  ~  * submitting this project as yours will cause you to break the Udacity Honor Code
  ~  * and the suspension of your account.
  ~  *
  ~  * As author of the project, I allow you to check it as a reference, but if you submit it
  ~  * as your own project, it's your own responsibility if you get expelled.
  ~  *
  ~  * Copyright (c) 2018 Beatriz Ovejero
  ~  *
  ~  * Besides the above notice, the following license applies and this license notice must be
  ~  * included in all works derived from this project.
  ~  *
  ~  * MIT License
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/antique"
    tools:context="com.example.android.musicalstructure.SongsActivity">

    <TextView
        android:id="@+id/song1"
        style="@style/songs"
        android:layout_toEndOf="@+id/play1"
        android:layout_toRightOf="@+id/play1"
        android:onClick="playing"
        android:text="@string/song1" />

    <Button
        android:id="@+id/play1"
        style="@style/plays"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/song1"
        android:background="@drawable/play" />

    <Button
        android:id="@+id/stop1"
        style="@style/stops"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/song1"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:background="@drawable/stop"
        android:onClick="stopping" />


    <TextView
        android:id="@+id/song2"
        style="@style/songs"
        android:layout_below="@+id/play1"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/play2"
        android:layout_toRightOf="@+id/play2"
        android:text="@string/song2" />

    <Button
        android:id="@+id/play2"
        style="@style/plays"
        android:layout_alignLeft="@+id/play1"
        android:layout_alignTop="@+id/song2"
        android:background="@drawable/play" />

    <Button
        android:id="@+id/stop2"
        style="@style/stops"
        android:layout_alignBaseline="@+id/song2"
        android:layout_alignBottom="@+id/song2"
        android:layout_alignLeft="@+id/stop1"
        android:layout_alignStart="@+id/stop1"
        android:background="@drawable/stop" />

    <TextView
        android:id="@+id/song3"
        style="@style/songs"
        android:layout_below="@+id/play2"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/play3"
        android:layout_toRightOf="@+id/play3"
        android:text="@string/song3" />

    <Button
        android:id="@+id/play3"
        style="@style/plays"
        android:layout_alignBaseline="@+id/song3"
        android:layout_alignBottom="@+id/song3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/play" />

    <Button
        android:id="@+id/stop3"
        style="@style/stops"
        android:layout_alignLeft="@+id/stop2"
        android:layout_alignStart="@+id/stop2"
        android:layout_alignTop="@+id/song3"
        android:background="@drawable/stop" />

    <TextView
        android:id="@+id/desc4"
        style="@style/desc4"
        android:layout_below="@id/play3"
        android:text="@string/desc4" />
</RelativeLayout>
